fix Overflow

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,7 +6,9 @@
 .second.loading {
     display: block;
 }
-
+.navigation ,.form-section {
+    overflow: hidden;
+}
 /*
 ****
 * Global
